--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "dj-database-url>=3.0.0",
     "django>=5.2.3",
     "django-bootstrap5>=25.1",
+    "django-filter>=25.1",
     "flake8>=7.2.0",
     "gunicorn>=23.0.0",
     "psycopg2-binary>=2.9.10",
