--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "flake8>=7.2.0",
     "gunicorn>=23.0.0",
     "psycopg2-binary>=2.9.10",
+    "pytest-django>=4.11.1",
     "python-dotenv>=1.1.0",
     "rollbar>=1.3.0",
 ]
