--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = task_manager.settings
-python_paths = python-project-52
+python_files = tests.py test_*.py *_tests.py
+pythonpath = .
