--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
 [tool.setuptools]
 packages = ["task_manager"]
 
+[tool.setuptools.package-dir]
+task_manager = "task_manager"
+
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "task_manager.settings"
 pythonpath = ["."]
