--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-pythonpath = task_manager
 DJANGO_SETTINGS_MODULE = task_manager.settings
 python_files = tests_*.py
+pythonpath = .
+testpaths = tests
