--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,6 @@ packages = ["task_manager"]
 [tool.setuptools.package-dir]
 task_manager = "task_manager"
 
-[tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "task_manager.settings"
-pythonpath = ["."]
+[pytest]
+DJANGO_SETTINGS_MODULE = task_manager.settings
+pythonpath = .
