--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,5 +24,5 @@ packages = ["task_manager"]
 task_manager = "task_manager"
 
 [pytest]
-DJANGO_SETTINGS_MODULE = task_manager.settings
+DJANGO_SETTINGS_MODULE = 'task_manager.settings'
 pythonpath = .
