--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "pytest-django>=4.11.1",
     "python-dotenv>=1.1.0",
     "rollbar>=1.3.0",
+    "whitenoise>=6.9.0",
 ]
 
 [tool.setuptools]
@@ -24,6 +25,6 @@ packages = ["task_manager"]
 task_manager = "task_manager"
 
 [tool.pytest.ini_options]
+[pytest]
 DJANGO_SETTINGS_MODULE = "task_manager.settings"
-pythonpath = ["."]
-python_files = ["tests.py", "test_*.py", "*_tests.py"]
+python_files = ["test_*.py", "*_test.py"]
