--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ dependencies = [
     "whitenoise>=6.9.0",
 ]
 
+[dependency-groups]
+dev = [
+    "coverage>=7.8.0",
+    "ruff>=0.11.7",
+]
+
 [tool.setuptools]
 packages = ["task_manager"]
 
