debug: change python files in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,4 +30,4 @@ task_manager = "task_manager"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "task_manager.settings"
-python_files = ["test_*.py", "*_test.py"]
+python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
