--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,12 @@ dev = [
     "ruff>=0.11.7",
 ]
 
-[tool.setuptools]
-packages = ["task_manager"]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.setuptools.package-dir]
-task_manager = "task_manager"
+[tool.hatch.build.targets.wheel]
+packages = ["task_manager"]
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "task_manager.settings"
